--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@ a.modalButton {
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    /* height: 100vh;
-    width: 100%; */
+    height: 100vh;
     top: 0;
     bottom: 0;
     right: 0;
@@ -66,10 +65,7 @@ a.modalButton {
 }
 
 .modalContent {
-    position: absolute;
-    /* top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
+    position: relative;
     background-color: #fff;
     width: 600px;
     max-width: 90%;
@@ -154,3 +150,4 @@ form p {
     }
 }
 
+/* last update */
