--- a/style.css
+++ b/style.css
@@ -15,6 +15,67 @@ body {
     height: 100vh;
 }
 
+.loader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: 000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.letter {
+    color: #484848;
+    text-transform: uppercase;
+    font-size: 3rem;
+    letter-spacing: 15px;
+    margin-bottom: 150px;
+    animation: flash 1.2s linear infinite;
+}
+
+@keyframes flash {
+    0% {
+        color: #00ffff;
+        text-shadow: 0 0 7px #00ffff;
+    }
+    90% {
+        color: #484848;
+        text-shadow: none;
+    }
+    100% {
+        color: #00ffffff;
+        text-shadow: 0 0 7px #00ffffff;
+    }
+}
+
+.letter:nth-child(1) {
+    animation-delay: 0.1s;
+}
+.letter:nth-child(2) {
+    animation-delay: 0.2s;
+}
+.letter:nth-child(3) {
+    animation-delay: 0.3s;
+}
+.letter:nth-child(4) {
+    animation-delay: 0.4s;
+}
+.letter:nth-child(5) {
+    animation-delay: 0.5s;
+}
+.letter:nth-child(6) {
+    animation-delay: 0.6s;
+}
+.letter:nth-child(7) {
+    animation-delay: 0.7s;
+}
+
+.fondu-out {
+    display: none;
+    transition: opacity 0.4s ease-out;
+}
+
 main {
     width: 100%;
     height: 100%;
